# MagnovaExamples

./: .gitignore  LICENSE  README.md
Oscilloscopes/AutoSet/: README.md  scope_autoset.py
Oscilloscopes/PlotFFT/: README.md  plot_fft.py
Oscilloscopes/PlotWaveform/: README.md  plot_waveform.py
Oscilloscopes/PlotWaveform/c++/: CMakeLists.txt  main.cpp  oscilloscope_waveform.cpp  oscilloscope_waveform.hpp
Oscilloscopes/PlotWaveform/python/: plot_waveform.py
Oscilloscopes/PlotWaveform/rust/: Cargo.toml
Oscilloscopes/PlotWaveform/rust/src/: main.rs
Oscilloscopes/RESTAPI/: README.md  rest_api.py  rest_waveform_test.py
Oscilloscopes/Simple/: CMakeLists.txt  README.md  simple_visa.cpp  simple_visa.py
Oscilloscopes/WebControl/: README.md  main.py
Oscilloscopes/WebControl/static/css/: styles.css
Oscilloscopes/WebControl/static/js/: acquisition.js  channelControl.js  connection.js  main.js  memoryDepth.js  timeScale.js  waveform.js
Oscilloscopes/WebControl/templates/: index.html
